[tool.poetry]
name = "test-flask"
version = "0.1.0"
description = ""
authors = ["Guillaume Havard <guill.havard@gmail.com>"]
readme = "README.md"
packages = [{include = "test_flask", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
