[tool.poetry]
name = "test-flask"
version = "0.1.0"
description = ""
authors = ["Guillaume Havard <guill.havard@gmail.com>"]
readme = "README.md"
packages = [{include = "test_flask", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.0"
watchdog = "^3.0.0"
flask = "^3.0.0"
black = "^23.9.1"
pylint = "^3.0.1"
isort = "^5.12.0"
faker = "^19.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.pylint.format]
max-line-length = 100

[tool.pylint.MASTER]
fail-under = '10.0'

[tool.pylint."MESSAGES CONTROL"]
disable = "missing-module-docstring"